Today's last attempt to fix the search bar on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ p {
   align-items: center;
 }
 .searchForm {
-  width: 250px;
+  width: 300px;
 }
 .form-control {
   display: inline-block;
@@ -74,11 +74,6 @@ p {
 }
 .locationIcon {
   width: 35px;
-}
-.units {
-  position: relative;
-  right: 20px;
-  top: 3px;
 }
 .unitButton {
   border: none;
